AM_CFLAGS = $(DEPS_CFLAGS)
AM_CXXFLAGS = $(DEPS_CFLAGS)
LIBS = $(DEPS_LIBS)

bin_PROGRAMS= mec
mec_SOURCES = ast.cpp ast.h \
basicblocks.cpp basicblocks.h \
bind.cpp \
build.cpp \
check.cpp \
drawAST.cpp \
enumerations.cpp enumerations.h \
error.cpp error.h \
extract.cpp \
forany.cpp \
functions.cpp functions.h \
gen.cpp \
getters.cpp \
lookup.cpp \
lts.cpp lts.h \
mec.cpp \
parser.cpp parser.h \
prettyprint.cpp \
queries.cpp \
scanner.cpp scanner.h \
setters.cpp \
show.cpp \
token.h \
typecodes.h \
types.h \
utilities.cpp utilities.h


