AM_CFLAGS = $(GLIBMM_CFLAGS) $(LLVM_CFLAGS)
AM_CXXFLAGS = $(GLIBMM_CFLAGS) $(LLVM_CXXFLAGS)
AM_LDFLAGS = $(LLVM_LDFLAGS)
LIBS = $(GLIBMM_LIBS) $(LLVM_LIBS)

bin_PROGRAMS= mec
mec_SOURCES = ast.cpp ast.h \
              basicblocks.cpp basicblocks.h \
              bind.cpp \
              build.cpp \
              check.cpp \
              drawAST.cpp \
              enumerations.cpp enumerations.h \
              error.cpp error.h \
              extract.cpp \
              forany.cpp \
              functions.cpp functions.h \
              gen.cpp \
              getters.cpp \
              llvmgen.cpp llvmgen.h \
              lookup.cpp \
              lts.cpp lts.h \
              mec.cpp \
              parser.cpp parser.h \
              prettyprint.cpp \
              queries.cpp \
              scanner.cpp scanner.h \
              setters.cpp \
              show.cpp \
              token.h \
              typecodes.h \
              types.h \
              utilities.cpp utilities.h

